--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>PopulationChange</title>
+  <title>TrajComp-vis</title>
 </head>
 <body>
   <div id="app"></div>
